@@ -1,5 +1,7 @@
 2005-11-28  Andrew Cagney  <cagney@redhat.com>
 
+	* Makefile.gen.sh (.fig): Add .fig files to DIST_FILES.
+
 	* acinclude.m4 (AC_PROG_CXX, AC_PROG_CC): Provide explict list.
 	(AC_CHECK_PROGS([GCJ])): Add, hacks around AM_PROG_GCJ breakage.
 	(AC_CHECK_PROGS([JAR]), AC_CHECK_PROGS([GCJH]),
